# life

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  colormapper_wrapper.cpp  constants.sh  life.f  life.f90  os.sh  run.sh  test.sh
.github/workflows/: main.yml
bat/: build.sh  clean.sh  test.sh
inputs/: acorn-scale.json  acorn-trace.json  acorn.inp  acorn.json  acorn.rle  bunnies.cells  bunnies.inp  bunnies.json  catacryst.inp  catacryst.json  catacryst.rle  factory.inp  factory.json  factory.txt  glider.txt
inputs/expected-output/: acorn-scale_10.pbm  acorn-scale_2.pbm  acorn-scale_99.pbm  acorn-trace_10.ppm  acorn-trace_2.ppm  acorn-trace_99.ppm  acorn_10.pbm  acorn_2.pbm  acorn_99.pbm  bunnies_10.pbm  bunnies_2.pbm  bunnies_99.pbm  factory_10.pbm  factory_2.pbm  factory_99.pbm
